# vmb

./: Makefile
CVSROOT/: loginfo
doc/: Howto.doc  SPECIFICATION.TXT
doc/presentation/: The Virtual Motherboard.ppt  fig3.ai  fig5.ai
examples/FAT32/: .gdbinit  FAT32_Access.h  FAT32_Definitions.h  FAT32_Disk.c  FAT32_Misc.c  FAT32_Misc.h  FAT32_Opts.h  FAT32_Table.c  FAT32_Write.c  Makefile  bios.s  default.mmc  diskio.s  tables.s
examples/GameOfLife/: README  bios.mms  default.vmb  gol.mms
examples/GameOfLife4/: README  default.mmc  gol.mms
examples/Hello/: Makefile  README.TXT  bios.mms  default.vmb
examples/Hello1/: bios.txt  default.mmc
examples/Hello3/: default.mmc
examples/LorentzAttractor/: README.TXT  lorentz.mms
examples/LorentzGNU/: hello.s
examples/Lorenz/: README  default.mmc  lorentz.mms
examples/LorenzGNU/: name.c
examples/Minesweeper/: bios.mms  default.mmc  gol.mms  gol.txt  minesweeper.mms  random7.mms
examples/Sevensegment/: bios.mms  bios.s  default.mmc
examples/Sound/: CosineApprox.nb  bios.mms  default.vmb
examples/Stopwatch/: bios.mms  readme.txt
examples/TAOCP Trafic Light/: ampel.mms  interpr.mms
htdocs/: README.TXT  VMBonOSX.eml  cache.html  configuration.html  index.html  initialization.html  messages.html
src/: 2010.txt  Makefile
src/Java/: vmb.properties
src/button/: button.c  button.vcproj  buttonOff.ai  help.html  win32.rc
src/clock/: default.mmc
src/device/: devicetemplate.c  devicetemplate.vcproj
src/disk/: disk.c  disk.vcproj  help.html  win32.rc
src/flash/: default.mmc  flash.c  flash.vcproj  help.html  vmb.manifest  win32.rc
src/hostdisk/: help.hhp  help.html  hostdisk.c  hostdisk.sln  hostdisk.vcproj  resource.h  win32.rc  winmain.c
src/keyboard/: help.html  keyboard.c  keyboard.vcproj  win32.rc  winmain.c
src/led/: help.html  icon.ai  led.c  led.vcproj  ledOffB2.ai  resource.h  win32.rc  winmain.c
src/mmixcpu/: mmixcpu.c
src/mmixide/: HOWTO_DEBUG.TXT  TODO.TXT  assembler.h  breakpoints.c  breakpoints.h  debug.c  debug.h  edit.c  editor.c  flags.c  hello.mms  indent.c  indent.h  license.txt  mmixide.hhc  mmixide.hhp  mmixide.rc  mmixide.sln  mmixide.vcproj  mmixrun.c  mmixrun.h  mmixvd.hhp  mmixvd.iss  mmixvd.vcproj  mmixwinde.c  mmoimg.ch  modpath.iss  optiontab.c  param.c  param.h  readmevd.txt  resource.h  runoptions.c  symtab.h  vmb_vd.rc  winmain.c  winmain.h
src/mother/: default.mmc  help.html  mother-man  mother.c  mother.vcproj  vmb.css  vmb.manifest  win32.rc
src/msp/: default.vmb  msp.vcxproj  msp.vcxproj.filters
src/mspio/: mspio.vcxproj  mspio.vcxproj.filters
src/opt/: opt.h  resource.h  vmbwinopt.vcproj  win32connect.rc  windebug.c  winmain.c  winproc.c  winres.h
src/ram/: help.html  ram-man  ram.c  ram.vcproj  win32.rc
src/rom/: help.html  karel.vcproj  rom.c  rom.vcproj  win32.rc  winmain.c
src/screen/: default.mmc  help.html  screen.c  screen.vcproj  win32.rc
src/serial/: help.html  serial.c  serial.vcproj  win32.rc
src/sevensegment/: default.mmc  help.html  resource.h  sevensegment.sln  sevensegment.vcproj  win32.rc  winmain.c
src/sound/: help.html  sound.c  sound.vcproj  win32.rc
src/splitterlib/: splitter.c
src/timer/: help.hhc  help.hhk  help.html  timer.c  timer.vcproj  win32.rc
src/umps/: Doxyfile  LICENSE  Makefile.am  Rakefile  default.mmc
src/umps/examples/ex1_ms2_noas/: Makefile  example.c
src/umps/examples/ex2_ms3_as/: coreboot.s
src/umps/examples/ex2_ms3_noas/: Makefile
src/umps/examples/ex5_ms6_compat_1/: .umpsrc
src/umps/examples/ex5_ms6_compat_1/e/: module.e
src/umps/examples/ex6_perf1/: Makefile
src/umps/examples/ex6_perf3/: coreboot.s
src/umps/examples/ex6_perf4/: .umpsrc  coreboot.s
src/umps/src/: Makefile.am  cache.cc  elf2umps.cc  main.c  objdump.cc  omain.cc  watch.cc  xinterface.cc
src/umps/src/e/: processor.e  setup.e  systembus.e  watch.e
src/umps/src/h/: aout.h  cache.h  omain.h
src/umps/support/: Makefile.am  crti.s  crti.template.s  crtso.s  exec.s  umpsrc
src/util/: cache.c  cache.h  option.c  vmb.c  vmb.h
src/vmbmmixlib/: address.c  address.h  mmix-bus.c  mmix-bus.h
src/vram/: vram.c
src/win32bin/: readme.txt  readme.vmb  vmb.iss  win32bin.sln
src/windevice/: win32.rc  windevice.vcproj
src/winopt/: dedit.c  inspect.h  layout.c  option.c  option.h  resource.h  win32about.rc  win32connect.rc  win32dedit.rc  win32memory.rc  winconfig.c  winconnect.c  winmem.c  winopt.h  winopt.rc  winopt.vcproj  winparam.c  winreg.c  winxy.c
src/winvram/: help.html  optiontab.c  resource.h  win32.rc  winmain.c  winvram.vcproj
util/: Makefile  imglist.l
vmb/: Makefile
vmb/doc/: CACHE.TXT  HOWTO_MESSAGE.TXT  Makefile
vmb/exampe3/: README  default.mmc  (+1 more)
vmb/src/umps/: CHANGELOG  CROSSDEV  Doxyfile  INSTALL  LICENSE  Makefile  Makefile.in  README  Rakefile  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  default.mmc  libtool  show_opcodes.rb
vmb/src/umps/devices/: printer.c  terminal.c
vmb/src/umps/examples/: plot.cmd  tgp.rb
vmb/src/umps/examples/ex1_ms2_as/: coreboot.s
vmb/src/umps/examples/ex2_ms3_noas/: example.c
vmb/src/umps/examples/ex3_ms4_as/: coreboot.s
vmb/src/umps/examples/ex4_ms5_as/: coreboot.s
vmb/src/umps/examples/ex5_ms6_compat_1/: Makefile  example.c  make.patch  module.c
vmb/src/umps/examples/ex5_ms6_compat_1/h/: const.h
vmb/src/umps/examples/ex6_perf1/: coreboot.s
vmb/src/umps/examples/ex6_perf2/: coreboot.s
vmb/src/umps/examples/ex6_perf5/: coreboot.s
vmb/src/umps/src/: Makefile  Makefile.in  TAGS  appforms.cc  cache.cc  defaults.c  disassemble.cc  elf2umps.cc  main.c  objdump.cc  omain.cc  processor.cc  setup.cc  systembus.cc  utility.cc  watch.cc  xinterface.cc
vmb/src/umps/src/e/: appforms.e  disassemble.e  processor.e  setup.e  systembus.e  utility.e  watch.e  xinterface.e
vmb/src/umps/src/h/: aout.h  blockdev.h  bussync.h  cache.h  const.h  defaults.h  formdefs.h  guisync.h  main.h  processor.h  types.h
vmb/src/umps/support/: coreboot.s  libumps.s  tapeboot.s  umpsrc.sample
vmb/src/umps/support/e/: libumps.e
(+880 files in other folders)
